Fix header alignment

--- a/less/app.less
+++ b/less/app.less
@@ -20,7 +20,6 @@ canvas {
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding-left: @grid-gutter-width * 2.5;
 
 	.poster-wrapper,
 	.container {
@@ -86,7 +85,6 @@ header {
 		max-width: 1200px;
 		margin: 0 auto;
 		padding: 0 @grid-gutter-width / 2;
-		padding-left: @grid-gutter-width * 2;
 	}
 	
 
